--- a/.gitignore
+++ b/.gitignore
@@ -737,3 +737,4 @@ Notes.bib.
 
 # End of 
 https://www.toptal.com/developers/gitignore/api/macos,pycharm,tex,r,python,visualstudiocode
+praca/main.tex
