--- a/.gitignore
+++ b/.gitignore
@@ -738,3 +738,4 @@ Notes.bib.
 # End of 
 https://www.toptal.com/developers/gitignore/api/macos,pycharm,tex,r,python,visualstudiocode
 praca/main.tex
+trees.tex
